<resources>
    <string name="app_name">Moyo ndi Mpamba</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="emergency">Emergency Situation? Don\'t hesitate</string>
    <string name="emergency_button">Emergency</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Login</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="report_emergency">Report Emergency</string>
    <string name="e_mergency">Emergency</string>
    <string name="don_t_have_an_account">Do not have an account?</string>
    <string name="terms_conditions"><![CDATA[I agree to the]]></string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="customise">Customise</string>
    <string name="dr">Dr.</string>
    <string name="doc_list">Available Doctors</string>
    <string name="select_doctor_to_view_more_details">Select doctor to view more details</string>
    <string name="patient_form">Booking Form</string>
    <string name="health_tips">Health Tips</string>
    <string name="appointments">Appointments</string>
    <string name="health_centres">Available Health Centres</string>
    <string name="title_activity_my_appointments">MyAppointments</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="conditions"><![CDATA[Terms & Conditions]]></string>
</resources>
