<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <include
            layout="@layout/toolbar_layout" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:padding="15dp"
                app:srcCompat="@drawable/stethoscope"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/name_field"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:padding="13dp"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/email_field"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:padding="13dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">
                <EditText
                    android:id="@+id/password_field"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:padding="13dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">
                <EditText
                    android:id="@+id/confirmpassword_field"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:padding="13dp"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:padding="10dp"
                android:text="@string/terms_conditions"
                android:textSize="12sp" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginBottom="7dp"
                android:text="@string/sign_up"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>