<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="171dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <include
                layout="@layout/toolbar_layout" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="125dp"
                    app:srcCompat="@drawable/encrypt" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/email"
                        android:drawableLeft="@drawable/ic_perm_identity"
                        android:drawablePadding="5dp"
                        android:layout_width="250dp"
                        android:layout_height="45dp"
                        android:inputType="textEmailAddress"
                        android:layout_marginTop="20dp"
                        android:hint="@string/email" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">
                    <EditText
                        android:id="@+id/password"
                        android:drawablePadding="7dp"
                        android:layout_width="250dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="23dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawableLeft="@drawable/ic_lock" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/login"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/login_button"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/don_t_have_an_account"
                    app:fontFamily="sans-serif-light" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/sign_up"
                    android:paddingLeft="2dp"
                    android:textColor="#0000ff"
                    android:textSize="17sp"
                    app:fontFamily="sans-serif-light"
                    android:clickable="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/emergency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="65dp"
                    android:hint="@string/e_mergency"
                    android:padding="5dp"
                    android:textSize="19sp"
                    android:clickable="true"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>